Delete unneccessary method